# DSoftware-Simulador-de-Fases-Lunares

./: LICENSE  README.md  main.py  s1_main.ipynb  setup.cfg
simulador/: datos_lunares.py  observador.py
src/simulador_fases_lunares/: __init__.py  datos_lunares.py  observador.py  visualizacion_fase_lunar.py
tests/: test.py  test_datos_lunares.py  test_integracion.py  test_observador.py
