[metadata]
name = simulador_fases_lunares
version = 0.1.0
author = Sebastian Padilla
description = Simulador de Fases Lunares
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SPadillaC/DSoftware-Simulador-de-Fases-Lunares
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src